--- a/extension/manifest.production.json
+++ b/extension/manifest.production.json
@@ -21,16 +21,19 @@
   },
   "browser_specific_settings": {
     "gecko": {
-        "id": "picture-of-the-day@learntosolveit.com",
-        "data_collection_permissions": {
-          "required": [
-             "locationInfo"
-          ],
-          "optional": [
-             "technicalAndInteraction"
-          ]
-         }
+      "id": "picture-of-the-day@learntosolveit.com",
+      "strict_min_version": "109.0",
+      "data_collection_permissions": {
+        "required": [
+          "storage",
+          "https://picture.learntosolveit.com/*"
+        ],
+        "optional": [
+          "https://api.nasa.gov/*",
+          "https://www.googletagmanager.com/*"
+        ]
       }
+    }
   },
  "author": "Senthil Kumaran",
   "homepage_url": "https://picture.learntosolveit.com"
