--- a/extension/manifest.production.json
+++ b/extension/manifest.production.json
@@ -22,15 +22,12 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "picture-of-the-day@learntosolveit.com",
-      "strict_min_version": "109.0",
       "data_collection_permissions": {
         "required": [
-          "storage",
-          "https://picture.learntosolveit.com/*"
+          "locationInfo"
         ],
         "optional": [
-          "https://api.nasa.gov/*",
-          "https://www.googletagmanager.com/*"
+          "technicalAndInteraction"
         ]
       }
     }
@@ -38,4 +35,3 @@
  "author": "Senthil Kumaran",
   "homepage_url": "https://picture.learntosolveit.com"
 }
-
